[gd_scene load_steps=3 format=3 uid="uid://g6opc6klfn4u"]

[ext_resource type="Script" uid="uid://bdkr6sl3xad7j" path="res://scripts/pause_menu.gd" id="1_n87rw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uahpa"]
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="PauseMenu" type="CanvasLayer"]

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n87rw")

[node name="Panel" type="PanelContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -185.5
offset_right = 136.0
offset_bottom = 185.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uahpa")

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Panel/MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="PauseMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 60
text = "PAUSED"
horizontal_alignment = 1

[node name="Continue" type="Button" parent="PauseMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Continue"

[node name="Settings" type="Button" parent="PauseMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Settings"

[node name="BackToTitle" type="Button" parent="PauseMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Back to title"

[connection signal="pressed" from="PauseMenu/Panel/MarginContainer/VBoxContainer/Continue" to="PauseMenu" method="_on_continue_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/MarginContainer/VBoxContainer/Settings" to="PauseMenu" method="_on_settings_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/MarginContainer/VBoxContainer/BackToTitle" to="PauseMenu" method="_on_back_to_title_pressed"]
